Refactoring readme and contributing docs